# advent-of-code-2024

./: .gitignore  README.md
day1/: p1.cc  p2.cc
day10/: p1.ts  p2.ts  package-lock.json  package.json
day11/src/: Main.kt
day12/: p1.ts  p2.ts  package-lock.json  package.json
day12/src/: Main.kt  p1.kt  p2.kt
day13/: CMakeLists.txt  p1.cc  p1.py  p2.cc  solve_model.py
day13/__pycache__/: p1.d.er  solve_model.d.er
day13/include/: position.hh
day13/util/: position.cc  problem.cc
day2/: p1.cc  p2.cc
day3/: input.txt  p1.cc  p2.cc
day4/: p1.cc  p2.cc
day5/: p1.cc  p2.cc
day6/: input.txt  p1.ts  p2.attempt2.ts  p2.ts  package-lock.json  package.json
day7/: p1.ts  p2.ts  package-lock.json  package.json
day8/: p1.ts  p2.ts  tsconfig.json
day9/: p1.ts  p2.ts  package-lock.json  package.json
